# project

./: .gitignore  LICENSE  README.md  init-python-project.sh
git/: README.md
tasks/: .coverage  .tasks.json  README.md  pyproject.toml  test.sh
tasks/src/tasks/: __main__.py  arg_parser.py  config.py  http_server.py  task.py  utils.py
tasks/src/tasks/actions/: __init__.py  _create.py  _list.py  _persist.py  _read.py
tasks/src/tasks/commands/: __init__.py  _add.py  _init.py  _list.py  _move.py  _serve.py  add.py  init.py
tasks/src/tasks/kanban/: __init__.py  _html_helpers.py  _http_helpers.py  _kanban.py  _task_html.py
tasks/tests/: test_arg_parser.py  test_hello.py  test_task.py  test_utils.py
tasks/tests/actions/: test_create.py  test_list.py  test_persist.py  test_read.py
tasks/tests/commands/: test_add.py  test_config.py  test_init.py  test_list.py  test_move.py  test_serve.py
tasks/this/tasks/: Serve_HTML_representation_of_tasks.md
