[project]
name = "tasks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
]

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"

[project.scripts]
tasks = "tasks.__main__:main"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "S"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.mypy]
python_version = "3.12"
files = ["src", "tests"]

check_untyped_defs = true
warn_unreachable = true
strict_equality = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
no_implicit_reexport = true
extra_checks = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --import-mode=importlib"

[tool.coverage.run]
source = ["tasks"]
omit = [
    "*/__init__.py",
    "*/__main__.py",
]
